changelog - fix spacing when screen size is more than 1440px

--- a/styles/breadcrumbs.css
+++ b/styles/breadcrumbs.css
@@ -2,6 +2,7 @@
 .breadcrumbs {
     font-family: var(font-family);
     font-size: var(--font-size-l);
+    margin-bottom: var(--spacing-m);
 
 }
 
